# zax

./: .flake8  .gitignore  README.md  cfgstate.py  common.py  config.py  f2gm.py  f2gm.yml  games.py  image_listbox.py  ini_layouts.py  layout.py  pyproject.toml  pyqt_hacks.py  requirements-dev.txt  requirements.txt  scan.py  setup.py  sfall.py  theme.py  updates.py  variables.py  wine.py  zax.py  zax.spec  zax_config.py  zax_layout.py  zax_log.py
.github/workflows/: build.yml  requirements.yml
configs/: 02_f2_res.ini.yml  f2_res.ini.yml  fallout2.cfg.yml
docs/: changelog.md  development.md
formats/: ddraw.ini.yml  f2_res.ini.yml  fallout2.cfg.yml
ini_config/: 01_fallout2.cfg.yml  02_f2_res.ini.yml  f2_res.ini.yml  fallout2.cfg.yml
layouts/: common.py  ddraw_ini.py  f2_res_ini.py  fallout2_cfg.py  trouble.py  wine.py  zax.py
tests/: test_zax.py
zax/: __main__.py  config.py  games.py  image_listbox.py  layout.py  pyqt_hacks.py  resources.py  sfall.py  theme.py  updates.py  variables.py  version.py  zax.spec  zax_config.py  zax_log.py
zax/formats/: f2_res.ini.yml
zax/images/: zax_png.py
zax/layouts/: common.py  ddraw_ini.py  f2_res_ini.py  fallout2_cfg.py  trouble.py  wine.py  zax.py
